<resources>
    <string name="app_name">EPFInvest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="saving">Basic Saving in Account 1</string>
    <string name="dob">Date of Birth</string>
    <string name="eligible_amount">Eligible Investment Amount</string>
    <string name="calculate">Calculate</string>
</resources>